# tark-mcp

./: CUSTOM_QUERIES.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-19-tark-mcp-implementation.md  2026-05-27-transcript-release-version-implementation.md  2026-06-15-diff-versioned-refseq.md  2026-06-15-tark-mcp-skill-implementation.md
docs/superpowers/specs/: 2026-05-19-diff-transcripts-protein-sequence-design.md  2026-05-19-tark-mcp-design.md  2026-05-27-transcript-release-version-design.md  2026-06-15-tark-mcp-skill-design.md
plugin/: plugin.json
plugin/skills/tark-mcp/: SKILL.md
src/tark_mcp/: client.py  models.py  server.py
src/tark_mcp/tools/: diff.py  formatters.py  genes.py  mane.py  releases.py  sequences.py  transcripts.py  versions.py
tests/: conftest.py
tests/integration/: test_live_api.py
tests/unit/: test_client.py  test_models.py
tests/unit/test_tools/: test_diff.py  test_genes.py  test_mane.py  test_releases.py  test_sequences.py  test_transcripts.py
