[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tark-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cachetools>=5.0",
    "tenacity>=8.0",
]

[project.scripts]
tark-mcp = "tark_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tark_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]
